# sovereign_privacy_ai

./: .env  .env.example  .gitignore  .sudd-version  AGENTS.md  CLAUDE.md  LICENSE  README.md  adversarial_report.md  chatgpt_clone_privacy_Prd.md  claude --dangerously-skip-permissions.txt  docker-compose.yml  error_console_logs.txt  fake_pii_data.csv  generate_pdf.py  how_to_dev_running`.txt  mockup-minimal.html  sovereign-ai-new-features.md  start-local.ps1  summary_of_current_product.md
.claude/skills/sudd-add-task/: SKILL.md
.claude/skills/sudd-apply/: SKILL.md
.claude/skills/sudd-audit/: SKILL.md
.claude/skills/sudd-auto/: SKILL.md
.claude/skills/sudd-chat/: SKILL.md
.claude/skills/sudd-discover/: SKILL.md
.claude/skills/sudd-done/: SKILL.md
.claude/skills/sudd-gate/: SKILL.md
.claude/skills/sudd-init/: SKILL.md
.claude/skills/sudd-new/: SKILL.md
.claude/skills/sudd-plan/: SKILL.md
.claude/skills/sudd-port/: SKILL.md
.claude/skills/sudd-run/: SKILL.md
.claude/skills/sudd-status/: SKILL.md
.claude/skills/sudd-test/: SKILL.md
.crush/skills/sudd-add-task/: SKILL.md
.crush/skills/sudd-apply/: SKILL.md
.crush/skills/sudd-audit/: SKILL.md
.crush/skills/sudd-auto/: SKILL.md
.crush/skills/sudd-chat/: SKILL.md
.crush/skills/sudd-discover/: SKILL.md
.crush/skills/sudd-done/: SKILL.md
.crush/skills/sudd-gate/: SKILL.md
.crush/skills/sudd-init/: SKILL.md
.crush/skills/sudd-new/: SKILL.md
.crush/skills/sudd-plan/: SKILL.md
.crush/skills/sudd-port/: SKILL.md
.crush/skills/sudd-run/: SKILL.md
.crush/skills/sudd-status/: SKILL.md
.crush/skills/sudd-test/: SKILL.md
.github/workflows/: claude.yml  release.yml
.opencode/command/: sudd-apply.md  sudd-audit.md  sudd-auto.md  sudd-chat.md  sudd-discover.md  sudd-done.md  sudd-gate.md  sudd-init.md  sudd-new.md  sudd-plan.md  sudd-port.md  sudd-run.md  sudd-status.md  sudd-test.md
.sudd-backup/20260410-092200/sudd/: state.json  sudd.yaml
.sudd-backup/20260415-171710/sudd/: standards.md  state.schema.json  sync.sh
.sudd-backup/20260415-172231/sudd/: state.json  sudd.yaml
.sudd-backup/20260418-194246/sudd/: cli-adapter.md  sync.bat
.sudd-backup/20260424-135945/sudd/: state.json  vision.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agents/: context-manager.md  contract-verifier.md  deep-think.md  persona-detector.md  persona-validator.md
apps/desktop/: .env  capacitor.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  supabase-schema.sql  vite.config.ts
apps/desktop/scripts/: setup-tts.bat  setup-tts.ps1
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  _patch_ff.js  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/patches/esaxx-rs/: build.rs
apps/desktop/src-tauri/src/: _boot.js  _tests_ff.txt  anonymization.rs  anonymization_commands.rs  attribute_extraction.rs  attribute_extraction_commands.rs  backend_routing.rs  backend_routing_commands.rs  chunker.rs  commands.rs  crypto.rs  db.rs  embedding.rs  embedding_commands.rs  entity_resolver.rs  file_parsers.rs  form_export.rs  form_export_commands.rs  form_fill.rs  form_fill_commands.rs  gliner.rs  gliner_commands.rs  gpu_detect.rs  inference.rs  inference_commands.rs  knowledge_commands.rs  knowledge_store.rs  lib.rs  llama_backend.rs  local_memory.rs  local_memory_commands.rs  main.rs  ollama.rs  ollama_commands.rs  orchestration.rs  orchestration_commands.rs  profile_commands.rs  profiles.rs  redaction.rs  redaction_commands.rs  (+10 more)
apps/desktop/supabase/: config.toml
apps/voice-agent/: Dockerfile  README.md  agent.py  llm.py  requirements.txt  stt.py  tts.py
docs/: macos-signing.md
docs/plans/: 2026-02-23-minimal-theme.md  2026-02-23-obsidian-pro-canvas-workspace.md  2026-02-25-data-ownership-reframe.md  2026-02-26-promo-video-design.md  2026-02-26-promo-video-implementation.md
docs/superpowers/specs/: 2026-03-28-form-fill-design.md
openspec/: project.md
openspec/changes/add-private-voice-assistant/: design.md  proposal.md  tasks.md
openspec/changes/integrate-livekit-voice-agent/: design.md  proposal.md  tasks.md
sudd/: AGENTS-SUDD.md  CURRENT_STATE.md  cli-adapter.md  standards.md  state.json  state.schema.json  sudd.yaml  sync.bat  sync.sh  vision.md
sudd/agents/: antigravity.md  architect.md  blocker-detector.md  coder.md  contract-verifier.md  decomposer.md  learning-engine.md  monitor.md  persona-researcher.md  qa.md  rubric-adversary.md  solution-explorer.md  task-discoverer.md  ux-architect.md  ux-tester.md
sudd/audit/: report-previous.md  rubric-adversary-v1.md  rubric-adversary-v2.md  rubric.md
sudd/auto-reports/2026-04-19/: summary-1.md  summary-2.md  summary-3.md  summary-4.md  summary-5.md  summary-6.md  summary-7.md  summary-8.md  summary.md
sudd/auto-reports/2026-04-20/: summary-1.md  summary-2.md  summary.md
sudd/auto-reports/history/: CURRENT_STATE-2026-04-19-1908.md  CURRENT_STATE-2026-04-19-1924.md  CURRENT_STATE-2026-04-19-1926.md  CURRENT_STATE-2026-04-19-2024.md  CURRENT_STATE-2026-04-19-2030.md  CURRENT_STATE-2026-04-19-2036.md  CURRENT_STATE-2026-04-19-2041.md  CURRENT_STATE-2026-04-19-2052.md  CURRENT_STATE-2026-04-19-2101.md  CURRENT_STATE-2026-04-19-2104.md  (+12 more)
sudd/personas/: default.md
sudd/reference/: worktrees.md
video/: FOR_GEMINI_REVIEW.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/src/: Root.tsx
website/: index.html  style.css
(+307 files in other folders)
